Fixed profile pic not appearing on mobile view

--- a/public/css/media-queries.css
+++ b/public/css/media-queries.css
@@ -215,7 +215,6 @@
 
    /* About Section
    -------------------------------------------------------------------- */
-   #about .profile-pic { display: none; }
    #about .download .button {
       width: 100%;
       text-align: center;
